--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/LohyerC/Photos">View on GitHub</a>
 
-          <h1 id="project_title">Photos</h1>
+          <h1 id="project_title">Project title</h1>
           <h2 id="project_tagline">Ceci est un test de Github</h2>
 
             <section id="downloads">
